# syzygy-tables.info

./: .eslintrc.json  .gitignore  .prettierignore  .tool-versions  7-men-notes.txt  Gruntfile.js  Pipfile  README.md  config.default.ini  eslint.config.mjs  gulpfile.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  server.fcgi  server.py  server35.py  stats.json  stats.py  style.css  tox.ini  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml
checksums/: B2SUM  MD5SUM  PackManifest  SHA1SUM  SHA256SUM  SHA512SUM  b2  b3  bytes.tsv  md5  sha1  sha256  sha3-224  syzygy-bytes.tsv  tbcheck.txt
etc/nginx/: syzygy-ssl.conf
etc/ssl/: dhparam.pem  stapling.pem
five-men/: .gitignore  MD5SUMS.txt  SOURCE.txt
gaviota/: .gitignore
src/: bootstrap.css  client.js  client.ts  main.ts  mousetrap.ts
static/: bootstrap.min.css  client.js  script.js  style.css
static/css/: cburnett.css  chessground.css  style.css
static/fonts/: config.json  fontello.eot
static/js/: client.js
stats/atomic/: 3-4-5.atbw.md5  3-4-5.atbz.md5  6.atbw.md5  6.atbz.md5  atomic-stats.txt
stats/giveaway/: 2-3-4-5-giveaway.gtbw.md5  6-giveaway.gtbw.md5  6-giveaway.gtbz.md5
stats/regular/: 3-4-5.rtbw.md5  6.rtbz.md5  regular-stats.txt
syzygy_tables_info/: __main__.py  model.py  server.py  stats.py  tarpit.py  views.py
templates/: apidoc.html  endgames.html  index.html  layout.html  legal.html  metrics.html  probe.html  stats.html  xhr-probe.html
util/: sort-checksums.py  stats-v1.py  stats-v2.py  stats-v3.py  stats-v4.py  stats.py
(+16 files in other folders)
