[project]
name = "syzygy-tables.info"
version = "1.0.0"
description = "User interface and public API for probing Syzygy endgame tablebases"
authors = [
    { name = "Niklas Fiekas", email = "niklas.fiekas@backscattering.de" }
]
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "aiohttp~=3.12.15",
    "Brotli~=1.1.0",
    "cbor2~=5.7.0",
    "chess~=1.11.2",
    "tinyhtml~=1.3.0",
]

[dependency-groups]
dev = [
    "mypy~=1.18.2",
]
